Report JVM argument flags for crash tracking (#11013)
chore(crashtracking): Report VM argument flags

fix(crashtracking): use stringbuilder instead of concatenation

Co-authored-by: devflow.devflow-routing-intake <devflow.devflow-routing-intake@kubernetes.us1.ddbuild.io>